# RelayRL

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md
crates/: Cargo.toml
crates/new_relayrl_algorithms/: Cargo.toml
crates/new_relayrl_algorithms/src/: lib.rs
crates/new_relayrl_algorithms/src/algorithms/: mod.rs
crates/new_relayrl_algorithms/src/algorithms/PPO/: kernel.rs  mod.rs  replay_buffer.rs
crates/new_relayrl_algorithms/src/algorithms/PPO/independent/: mod.rs
crates/new_relayrl_algorithms/src/templates/: base_algorithm.rs
crates/relayrl/: Cargo.toml  README.md
crates/relayrl/src/: lib.rs
crates/relayrl_algorithms/: CHANGELOG.md  Cargo.toml  README.md
crates/relayrl_algorithms/src/: lib.rs
crates/relayrl_algorithms/src/algorithms/: mod.rs  onnx_builder.rs  torch_builder.rs
crates/relayrl_algorithms/src/algorithms/DDPG/: mod.rs
crates/relayrl_algorithms/src/algorithms/DDPG/independent/: kernel.rs  mod.rs
crates/relayrl_algorithms/src/algorithms/DDPG/multiagent/: kernel.rs  mod.rs
crates/relayrl_algorithms/src/algorithms/PPO/: kernel.rs  mod.rs  replay_buffer.rs
crates/relayrl_algorithms/src/algorithms/PPO/independent/: mod.rs
crates/relayrl_algorithms/src/algorithms/PPO/multiagent/: kernel.rs  mod.rs
crates/relayrl_algorithms/src/algorithms/REINFORCE/: kernel.rs  mod.rs  replay_buffer.rs
crates/relayrl_algorithms/src/algorithms/REINFORCE/independent/: mod.rs
crates/relayrl_algorithms/src/algorithms/REINFORCE/multiagent/: kernel.rs  mod.rs
crates/relayrl_algorithms/src/algorithms/TD3/: mod.rs
crates/relayrl_algorithms/src/algorithms/TD3/independent/: kernel.rs  mod.rs
crates/relayrl_algorithms/src/algorithms/TD3/multiagent/: kernel.rs  mod.rs
crates/relayrl_algorithms/src/algorithms/nn/: conv_policy.rs  dtype.rs  error.rs  generic_mlp.rs  mod.rs  model_module.rs  traits.rs  types.rs  value_function.rs
crates/relayrl_algorithms/src/logging/: epoch_logger.rs  mod.rs  session_logger.rs
crates/relayrl_algorithms/src/templates/: base_algorithm.rs  base_replay_buffer.rs
crates/relayrl_env_trait/: CHANGELOG.md  Cargo.toml  README.MD
crates/relayrl_env_trait/src/: lib.rs
crates/relayrl_framework/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/relayrl_framework/example_configs/: client_config.json  inference_server_config.json  server_config.json  training_server_config.json
crates/relayrl_framework/proto/: relayrl.proto
crates/relayrl_framework/src/: lib.rs
crates/relayrl_framework/src/network/: mod.rs
crates/relayrl_framework/src/network/client/: agent.rs  builder.rs  mod.rs
crates/relayrl_framework/src/network/client/old/: agent_wrapper.rs  agent_zmq.rs
crates/relayrl_framework/src/network/client/runtime/: actor.rs  router.rs  router_dispatcher.rs
crates/relayrl_framework/src/network/client/runtime/coordination/: coordinator.rs  lifecycle_manager.rs  scale_manager.rs  state_manager.rs
crates/relayrl_framework/src/network/client/runtime/data/environments/: mod.rs  vec_env.rs
crates/relayrl_framework/src/network/client/runtime/data/file_sink/: mod.rs
crates/relayrl_framework/src/network/client/runtime/data/sinks/transport_sink/: mod.rs  transport_dispatcher.rs
crates/relayrl_framework/src/network/client/runtime/data/sinks/transport_sink/nats/: interface.rs  ops.rs  policies.rs
crates/relayrl_framework/src/network/client/runtime/data/training/: mod.rs
crates/relayrl_framework/src/network/client/runtime/data/transport/: mod.rs  transport_dispatcher.rs  zmq.rs
crates/relayrl_framework/src/network/client/runtime/data/transport_sink/: mod.rs  old_dispatcher.rs  transport_dispatcher.rs
crates/relayrl_framework/src/network/client/runtime/data/transport_sink/nats/: interface.rs  mod.rs  ops.rs  policies.rs
crates/relayrl_framework/src/network/client/runtime/data/transport_sink/zmq/: interface.rs  mod.rs  ops.rs  policies.rs
crates/relayrl_framework/src/network/client/runtime/router/: buffer.rs  filter.rs  mod.rs  receiver.rs  router_dispatcher.rs
crates/relayrl_framework/src/network/client/runtime/transport/: mod.rs  tonic.rs  transport_dispatcher.rs  zmq.rs
crates/relayrl_framework/src/network/server/: mod.rs
crates/relayrl_framework/src/templates/: mod.rs
crates/relayrl_framework/src/types/: mod.rs  trajectory.rs
crates/relayrl_framework/src/utilities/: config_json.rs  configuration.rs  misc_utils.rs
crates/relayrl_framework/src/utilities/observability/: mod.rs
crates/relayrl_framework/src/utilities/observability/logging/: mod.rs
crates/relayrl_framework/src/utilities/observability/logging/sinks/: console.rs  file.rs  mod.rs
crates/relayrl_framework/src/utilities/observability/metrics/: manager.rs  mod.rs
crates/relayrl_framework/src/utilities/observability/metrics/export/: mod.rs  open_telemetry.rs  prometheus.rs
crates/relayrl_framework/src/utilities/orchestration/: mod.rs  tonic_utils.rs
crates/relayrl_framework/tests/: agent_test.rs  client_local_sink_test.rs
crates/relayrl_types/: CHANGELOG.md  Cargo.toml  README.md
crates/relayrl_types/src/: lib.rs
crates/relayrl_types/src/data/: action.rs  mod.rs  tensor.rs  trajectory.rs
crates/relayrl_types/src/data/records/: arrow.rs  csv.rs  mod.rs
crates/relayrl_types/src/data/utilities/: chunking.rs  compress.rs  encrypt.rs  integrity.rs  metadata.rs  quantize.rs
crates/relayrl_types/src/model/: hot_reloadable.rs  mod.rs  utils.rs
crates/relayrl_types/src/types/: action.rs  tensor.rs  trajectory.rs
crates/relayrl_types/src/types/data/: action.rs  mod.rs  tensor.rs  trajectory.rs
crates/relayrl_types/src/types/data/utilities/: chunking.rs
crates/relayrl_types/src/types/model/: hot_reloadable.rs  mod.rs  utils.rs
crates/relayrl_types/src/utilities/: chunking.rs  compress.rs  encrypt.rs  integrity.rs  metadata.rs  quantize.rs
relayrl_python/: Cargo.toml
relayrl_python/src/: lib.rs
relayrl_python/src/python_subprocesses/: python_algorithm_request.rs
relayrl_types/: Cargo.toml
relayrl_types/src/: lib.rs
relayrl_types/src/types/: action.rs  trajectory.rs
(+69 files in other folders)
