[workspace]
members = [
    "crates/relayrl_framework",
    "crates/relayrl_python",
    "crates/relayrl_cli",
    "crates/relayrl_types",
    "crates/relayrl_algorithms",
]
resolver = "2"

[workspace.dependencies]
relayrl_framework = { version = "0.5.0-alpha.1", path = "crates/relayrl_framework"}
relayrl_types = { version = "0.5.2", path = "crates/relayrl_types"}
relayrl_algorithms = { version = "0.1.0", path = "crates/relayrl_algorithms"}

burn-core = "0.20.0"
burn-nn = "0.20.0"
burn-autodiff = "0.20.0"
burn-tensor = "0.20.0"
burn-ndarray = "0.20.0"
burn-tch = "0.20.0"
burn-optim = "0.20.0"

tokio = "1.49.0"

serde = "1.0.228"
bytemuck = "1.25.0"

dashmap = "6.1.0"

rand = "0.9.2"

ndarray = "0.17.2"

thiserror = "2.0.18"
async-trait = "0.1.89"

arrow = "57.3.0"
arrow-schema = "57.3.0"
arrow-array = "57.3.0"
csv = "1.4.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true
