[workspace]
members = [
    "crates/relayrl_framework",
    "crates/relayrl_python",
    "crates/relayrl_cli",
    "crates/relayrl_types",
    "crates/relayrl_algorithms",
    "crates/relayrl_env_trait",
]
resolver = "2"

[workspace.dependencies]
relayrl_framework = { version = "0.5.0-beta.1", path = "crates/relayrl_framework"}
relayrl_types = { version = "0.6.0", path = "crates/relayrl_types"}
relayrl_algorithms = { version = "0.2.0", path = "crates/relayrl_algorithms"}
relayrl_env_trait = { version = "1.1.0", path = "crates/relayrl_env_trait"}

burn-tensor = "0.20.1"
burn-ndarray = "0.20.1"
burn-tch = "0.20.1"
burn-autodiff = "0.20.1"
burn-core = "0.20.1"
burn-optim = "0.20.1"
burn-nn = "0.20.1"

tokio = "1.50.0"

serde = "1.0.228"
serde_json = "1.0.149"

dashmap = "6.1.0"

uuid = "1.22.0"

log = "0.4.29"

rand = "0.10.0"

ndarray = "0.17.2"

bytemuck = "1.25.0"

bincode = "2.0.1"

tempfile = "3.26.0"

thiserror = "2.0.18"
async-trait = "0.1.89"

arrow = "57.3.0"
arrow-schema = "57.3.0"
arrow-array = "57.3.0"
csv = "1.4.0"

generic-array = "0.14.9"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true