[package]
name = "relayrl_env_trait"
version = "1.0.0"
edition = "2024"
description = "A small library for defining traits for training and testing environments in the RelayRL framework."
repository = "https://github.com/jrcalgo/relayrl"
documentation = "https://docs.rs/crate/relayrl_env_trait"
keywords = ['rl-env-trait', 'multi-agent', 'deep-learning', 'ai', 'training']
categories = ['science', 'algorithms', 'simulation', 'concurrency', 'mathematics']
license = "Apache-2.0"

[dependencies]
thiserror = { workspace = true }