[package]
name = "relayrl_framework"
version = "0.5.0-alpha"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
edition = "2024"
description = "A distributed, system-oriented multi-agent reinforcement learning framework."
repository = "https://github.com/jrcalgo/relayrl"
documentation = "https://docs.rs/crate/relayrl_framework"
readme = "README.md"
keywords = ['machine-learning', 'multi-agent', 'framework', 'client-server', 'system-integration']
categories = ['science', 'simulation', 'asynchronous', 'network-programming']
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["client"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[lib]
name = "relayrl_framework"
crate-type = ["rlib"]

[features]
default = ["client"]

network = ["client", "inference_server", "training_server"]
client = []
inference_server = ["transport_layer"]
training_server = ["transport_layer"]

transport_layer = ["async_transport", "sync_transport"]
async_transport = []  # TODO: Add async networking modules here.
sync_transport = ["zmq_transport"]
zmq_transport = ["zmq"]

database_layer = ["postgres_db", "sqlite_db"]
postgres_db = ["postgres"]
sqlite_db = ["sqlite"]

logging = ["log4rs"]
metrics = ["prometheus", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
profile = ["flamegraph", "console-subscriber"]

[dependencies]
# Crates built by me
relayrl_types = { version = "0.3.21", features = ["ndarray-backend", "tch-backend", "codec-full", "inference-models"] }
active-uuid-registry = { version = "0.3.0", features = ["concurrent-map"]}

# General external crates used throughout framework
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v8"] }
log = { version = "0.4.28", features = ["kv"] }
rand = "0.9.2"
dashmap = "6.1.0"
thiserror = "2.0.17"
async-trait = "0.1.89"
burn-tensor = "0.18.0"
once_cell = "1.19.0"
tempfile = "3.9.0"
serde_json = "1.0.111"
serde-pickle = "1.1.1"
bytemuck = "1.14.1"
bincode = "2.0.1"
# TODO: Add Redis support for training data storagen & querying
# redis = 0.32.7

# Trajectory data writing
arrow = { version = "57.1.0", features = ["ipc_compression", "default"]}
arrow-schema = "57.1.0"
arrow-array = "57.1.0"

# Optional dependencies
zmq = { version = "0.10.0", optional = true }
postgres = { version = "0.19.12", optional = true }
sqlite = { version = "0.37.0", optional = true }
prometheus = { version = "0.14.0", features = ["process"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry = { version = "0.31.0", optional = true}
opentelemetry-otlp = { version = "0.31.0", optional = true }
log4rs = { version = "1.3.0", optional = true }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true

[dependencies.flamegraph]
version = "0.6.7"
optional = true

# Optional dependency for tokio-console support.
# cargo install tokio-console, then listen on CLI
# To trace, ensure -> RUSTFLAGS="--cfg tokio_unstable"
[dependencies.console-subscriber]
version = "0.4.1"
optional = true

# Essential for benchmarking
[dev-dependencies.criterion]
version = "0.5.1"
features = ["html_reports", "async_tokio"]

[dev-dependencies.gym]
version = "2.2.1"