[package]
name = "relayrl_framework"
version = "0.5.0-alpha.1"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
edition = "2024"
description = "A distributed, system-oriented multi-agent reinforcement learning framework."
repository = "https://github.com/jrcalgo/relayrl"
documentation = "https://docs.rs/crate/relayrl_framework"
readme = "README.md"
keywords = ['machine-learning', 'multi-agent', 'framework', 'client-server', 'system-integration']
categories = ['science', 'simulation', 'asynchronous', 'network-programming']
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["client", "tch-backend"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[lib]
name = "relayrl_framework"
crate-type = ["rlib"]

[features]
default = ["client", "zmq-transport"]

tch-backend = ["relayrl_types/tch-backend", "relayrl_types/tch-model"]

full-zmq-network = ["client", "zmq-training-server", "zmq-inference-server"]
zmq-training-network = ["client", "zmq-training-server"]
zmq-inference-network = ["client", "zmq-inference-server"]

full-nats-network = ["client", "nats-training-server", "nats-inference-server"]
nats-training-network = ["client", "nats-training-server"]
nats-inference-network = ["client", "nats-inference-server"]

client = []
zmq-training-server = ["zmq-transport"]
zmq-inference-server = ["zmq-transport"]
nats-training-server = ["nats-transport"]
nats-inference-server = ["nats-transport"]

zmq-transport = ["zmq"]
nats-transport = ["async-nats"]

logging = ["log4rs"]
metrics = ["prometheus", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
profile = ["flamegraph", "console-subscriber"]

[dependencies]
# Crates built/maintained by me
relayrl_types = { workspace = true, features = ["ndarray-backend", "codec-full", "onnx-model"] }
# relayrl_algorithms = { workspace = true }
active-uuid-registry = { version = "0.6.1", features = ["concurrent-map"]}

# General external crates used throughout framework
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { version = "1.18.1", features = ["v8"] }
log = { version = "0.4.28", features = ["kv"] }
rand = "0.9.2"
dashmap = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
burn-tensor = { workspace = true }
once_cell = "1.19.0"
tempfile = "3.9.0"
serde_json = "1.0.111"
bytemuck = "1.14.1"
bincode = "2.0.1"
# TODO: Add Redis support for training data storagen & querying
# redis = 0.32.7

# Trajectory data writing
arrow = { workspace = true, features = ["ipc_compression", "default"]}
arrow-schema = { workspace = true }
arrow-array = { workspace = true }

# Optional dependencies
zmq = { version = "0.10.0", optional = true }
async-nats = { version = "0.46.0", optional = true }
prometheus = { version = "0.14.0", features = ["process"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry = { version = "0.31.0", optional = true}
opentelemetry-otlp = { version = "0.31.0", optional = true }
log4rs = { version = "1.3.0", optional = true }

[dependencies.flamegraph]
version = "0.6.7"
optional = true

# Optional dependency for tokio-console support.
# cargo install tokio-console, then listen on CLI
# To trace, ensure -> RUSTFLAGS="--cfg tokio_unstable"
[dependencies.console-subscriber]
version = "0.4.1"
optional = true

# Essential for benchmarking
[dev-dependencies.criterion]
version = "0.5.1"
features = ["html_reports", "async_tokio"]

[dev-dependencies.gym]
version = "2.2.1"