[package]
name = "relayrl_types"
version = "0.2.12"
authors = ["jrcalgo <jacksonr1212@outlook.com>"]
edition = "2024"
description = "Data types for the RelayRL framework."
repository = "https://github.com/jrcalgo/relayrl"
documentation = "https://docs.rs/crate/relayrl_types"
readme = "README.md"
keywords = ['networking', 'learning', 'tensors', 'data-types', 'serialization']
categories = ['science', 'data-structures', 'encoding']
license = "Apache-2.0"

[features]
default = ["ndarray-backend", "network-full"]
 
ndarray-backend = ["burn-ndarray"]
tch-backend = ["burn-tch"]

encryption = ["chacha20poly1305"]
compression = ["lz4_flex", "zstd"]
integrity = ["blake3"]
quantization = ["half"]
metadata = ["bincode"]
zerocopy = ["bytes"]

network-basic = ["compression", "integrity", "zerocopy"]
network-secure = ["network-basic", "encryption"]
network-full = ["network-secure", "metadata", "quantization"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}

bytemuck = "1.20.0"
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# TODO: Add support for these dependencies and remove tch entirely from relayrl_types
burn-tensor = "0.18.0"
burn-ndarray = {version = "0.18.0", optional = true}
burn-tch = {version = "0.18.0", optional = true}
# burn-rocm = {version = "0.18.0", optional = true} # TODO: Add support for rocm (probably 0.3.0)
# burn-cuda = {version = "0.18.0", optional = true} # TODO: Add support for cuda (probably 0.3.0)
# burn-wgpu = {version = "0.18.0", optional = true} # TODO: Add support for wgpu (probably 0.3.0)

[dependencies.blake3]
version = "1.8.2"
optional = true

[dependencies.bytes]
version = "1.10.1"
optional = true

[dependencies.zstd]
version = "0.13.3"
optional = true

[dependencies.lz4_flex]
version = "0.11.5"
optional = true

[dependencies.chacha20poly1305]
version = "0.10.1"
optional = true

[dependencies.bincode]
version = "2.0.1"
features = ["serde"]
optional = true

[dependencies.half]
version = "2.7.0"
optional = true