[package]
name = "relayrl_types"
version = "0.4.1"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
edition = "2024"
description = "Data types for the RelayRL framework."
repository = "https://github.com/jrcalgo/relayrl"
documentation = "https://docs.rs/crate/relayrl_types"
readme = "README.md"
keywords = ['networking', 'learning', 'tensors', 'types', 'serialization']
categories = ['science', 'data-structures', 'encoding']
license = "Apache-2.0"

[features]
default = ["ndarray-backend", "codec-full", "inference-models"]
 
ndarray-backend = ["burn-ndarray"]
tch-backend = ["burn-tch"]

inference-models = ["tch-model", "onnx-model"]
tch-model = ["tch", "tokio", "tempfile"]
onnx-model = ["ort", "tokio", "tempfile", "ndarray"]

encryption = ["chacha20poly1305"]
compression = ["lz4_flex", "zstd"]
integrity = ["blake3"]
quantization = ["half"]
metadata = ["bincode"]
zerocopy = ["bytes"]

codec-basic = ["compression", "integrity", "zerocopy"]
codec-secure = ["codec-basic", "encryption"]
codec-full = ["codec-secure", "metadata", "quantization"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

thiserror = { workspace = true }

bytemuck = "1.20.0"
dashmap = "6.1.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

csv = { workspace = true }
arrow = { workspace = true }

# TODO: Add support for these dependencies and remove tch entirely from relayrl_types
burn-tensor = { workspace = true }
burn-ndarray = { workspace = true, optional = true}
burn-tch = { workspace = true, optional = true}
# burn-rocm = {version = "0.18.0", optional = true} # TODO: Add support for rocm (probably 0.6.0)
# burn-cuda = {version = "0.18.0", optional = true} # TODO: Add support for cuda (probably 0.6.0)
# burn-wgpu = {version = "0.18.0", optional = true} # TODO: Add support for wgpu (probably 0.6.0)

tch = { version = "0.22.0", features = ["download-libtorch"], default-features = false, optional = true }
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], default-features = false, optional = true }
tokio = { version = "1.49.0", features = ["full"], optional = true }
tempfile = { version = "3.9.0", optional = true }
ndarray = { version = "0.17.2", optional = true }

[dependencies.blake3]
version = "1.8.2"
optional = true

[dependencies.bytes]
version = "1.10.1"
optional = true

[dependencies.zstd]
version = "0.13.3"
optional = true

[dependencies.lz4_flex]
version = "0.11.5"
optional = true

[dependencies.chacha20poly1305]
version = "0.10.1"
optional = true

[dependencies.bincode]
version = "2.0.1"
features = ["serde"]
optional = true

[dependencies.half]
version = "2.7.0"
optional = true
